Fix horizontal scrollbar always being there on screens <1207px wide

--- a/frontend/static/css/editor.css
+++ b/frontend/static/css/editor.css
@@ -23,7 +23,7 @@ body {
 }
 
 #tabs {
-  width: 99%;
+  box-sizing: border-box;
   height: 80%;
 }
 
@@ -36,6 +36,7 @@ body {
 .firepad {
   display: inline;
   height: auto;
+  width: 99%;
   position: absolute;
   bottom: 0;
   top: 35px;
